# thinksqlrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.sh  buildall.bat  perf_test.ps1  release.ps1  test.ps1  test_linux.ps1
module/linux/SQLThinkRS/: SQLThinkRS.psd1  SQLThinkRS.psm1
module/windows/SQLThinkRS/: SQLThinkRS.psd1  SQLThinkRS.psm1
src/: lib.rs
